--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,19 @@
 
   <name>HappyTrip</name>
   <url>http://maven.apache.org</url>
-
+  
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java-version>1.7</java-version>
+		<org.springframework-version>3.2.0.RELEASE</org.springframework-version>
+		<org.springframework.security.version>3.1.0.RELEASE</org.springframework.security.version>
+		<org.aspectj-version>1.6.9</org.aspectj-version>
+		<org.slf4j-version>1.5.10</org.slf4j-version>
+		<jpa.version>2.0-cr-1</jpa.version>
   </properties>
+  
+  
+  
 
   <dependencies>
  <dependency>
